# github-user-estimations

./: .gitignore  README.md  github_data.db  pyproject.toml  report.tex  requirements.txt  run.py  tokens.db
github_estimator/: config.py  crawler.py  database.py  estimator.py  main.py  sampler.py  token_manager.py  utils.py  validation.py  visualization.py
output/data/: all_results.json
