[project]
name = "github-user-estimations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=46.0.5",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyjwt>=2.11.0",
    "scipy>=1.12",
    "seaborn>=0.13",
    "tqdm>=4.66",
]
